fix(client): styling issues when username and id are too long

--- a/src/assets/style/common.scss
+++ b/src/assets/style/common.scss
@@ -274,4 +274,5 @@ input {
 
 .keep-spaces {
   white-space: pre-wrap;
+  font-family: inherit;
 }
